Add emoji to the main heading for enhanced visual appeal

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>asl meme wall</h1>
+    <h1>asl meme wall 🤓</h1>
     <div class="controls">
         <select id="sortSelect">
             <option value="reactions">Most reactions</option>
